<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:padding="@dimen/buttonMargin">

    <androidx.cardview.widget.CardView
        android:id="@+id/detailNoteCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/buttonMargin"
        app:cardCornerRadius="@dimen/cardRadius"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/shareBtn"
        app:cardBackgroundColor="@color/colorCardCoral">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                android:id="@+id/noteEditSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textMargin"
                android:ems="10"
                android:textStyle="bold"
                android:textSize="@dimen/detailSubjectSize"
                android:textColor="@color/detailPageCardTextColor"
                android:inputType="textPersonName"
                android:hint="@string/editSubjectHint"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@null"/>

            <EditText
                android:id="@+id/noteEditBodyText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorCardTextBackdrop"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/editBodyTextHint"
                android:inputType="textMultiLine"
                android:padding="@dimen/textMargin"
                android:textAlignment="gravity"
                android:textSize="@dimen/detailTextBodySize"
                android:textColor="@color/detailPageCardTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteEditSubject"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:padding="0dp"
        android:textAlignment="viewStart"
        android:text="@string/shareBtn"
        android:textColor="@color/goldButtonBackgroundColor"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/colorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttonMargin"
        android:padding="0dp"
        android:textAlignment="viewEnd"
        android:text="@string/colorBtn"
        android:textColor="@color/colorCardCoral"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/buttonMargin"
        android:text="@string/saveBtn"
        android:textSize="@dimen/textSubjectSize"
        android:backgroundTint="@color/goldButtonBackgroundColor"
        android:textColor="@color/goldButtonTextColor"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>